mongo.yaml
apiVersion: apps/v1  
kind: Deployment
metadata:
  name: mongo-deployment
  labels:               
    app: mongo-db
spec:
  replicas: 1
  selector:               #identifies set of resources
    matchLabels:           #match all the pods to this app
      app: mongo-db
  template:              #configuration of the pod
    metadata:
      labels:             #key/value pair that are attached k8s resources, all pods replicate with same label
        app: mongo-db
    spec:
      containers:
      - name: mongo-db1
        image: mongo:5.0  #image from the docker hub (mongo)
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:          #select the pod to forward the request
    app: mongo-db
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 27017
