deployment.yaml
#BAckend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-backend
  labels:
    app: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      name: backend-Pod
      labels:
        app: node-app
    spec:  
       containers:  
        - name: backend-container 
          image: image-registry.openshift-image-registry.svc:5000/dhanya-jenkins/nodeserver:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 5000
---
#backend service
kind: Service
apiVersion: v1
metadata:
  name: node-service-backend
  namespace: dhanya-assign
spec:
  type: ClusterIP
  ports:
    - name: backend
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: node-app
---
#routes backend
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: back-route
  namespace: dhanya-assign
  labels:
        app: node-app
spec:
  to:
    kind: Service
    name: node-service-backend
    weight: 100
  port:
    targetPort: 5000
